--- a/CoderStyleWebClient/pom.xml
+++ b/CoderStyleWebClient/pom.xml
@@ -48,7 +48,16 @@
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
     </dependency>
+            <dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
+		<!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-json -->
+		
 	</dependencies>
+	
 
 	<build>
 		<plugins>
