--- a/Unknowns/pom.xml
+++ b/Unknowns/pom.xml
@@ -43,6 +43,11 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.0.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
