--- a/Unknowns/pom.xml
+++ b/Unknowns/pom.xml
@@ -63,8 +63,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.mypackage.MyClass</mainClass>
+							<mainClass>com.unknowns.UnknownsApplication</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
